# bazel_grpc_pbuf_go

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
.github/workflows/: build.yml  push.yml  release.yml
cmd/: BUILD.bazel  constants.go
cmd/client/: BUILD.bazel  main.go
cmd/server/: BUILD.bazel  main.go
proto/helloworld/v1/: BUILD.bazel  hello_world.proto
