load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/abitofhelp/bazel_grpc_pbuf_go/cmd/client",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd",
        "//proto/helloworld/v1:helloworld_v1_go",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
