## BUILD.bazel

load("@go_googleapis//:repository_rules.bzl", "switched_rules_by_language")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_descriptor_set", "proto_library")

package(default_visibility = ["//visibility:public"])

## HELLOWORLD_V1_PROTO LIBRARY #########################################################################################
proto_library(
    name = "helloworld_v1_proto",
    srcs = ["hello_world.proto"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

########################################################################################################################
## HELLOWORLD_V1_GO_PROTO LIBRARY ######################################################################################
go_proto_library(
    name = "helloworld_v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/abitofhelp/bazel/easyproto2/proto/helloworld/v1",
    proto = ":helloworld_v1_proto",
    deps = [
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

########################################################################################################################
## HELLOWORLD_V1_GO LIBRARY ############################################################################################
go_library(
    name = "helloworld_v1_go",
    embed = [":helloworld_v1_go_proto"],
    importpath = "github.com/abitofhelp/bazel/easyproto2/proto/helloworld/v1",
)

########################################################################################################################
## HELLOWORLD_V1_DESCRIPTOR_SET ########################################################################################
proto_descriptor_set(
    name = "helloworld_v1_descriptor_set",
    deps = [
        ":helloworld_v1_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)
########################################################################################################################
